# filling_extraction

./: CMakeLists.txt  README.md  package.xml
config/: extract_config.yaml
include/filling_extraction/: FillingExtractor.h
launch/: extract_fillers.launch  point_cloud_xyzrgb.launch
scripts/: depth-rgb-synch.py
src/: FillingExtractor.cpp  filling_extractor_node.cpp
